D bmigration (#115)
* table widths

* concept of UI scaling

* Revert "concept of UI scaling"

This reverts commit f57eda6fbe36152deb7784c49cee14b61e0e82f2.

* caching dev fix

* init

* migration rewrite concept

* migration rewrite